# data-analyst-agent

./: .env.example  .env.template  .gitattributes  .gitignore  ADK_CLI_GUIDE.md  AGGREGATION_FINDINGS_FOR_ATLAS.md  AGGREGATION_IMPLEMENTATION.md  ANALYSIS_FOCUS_IMPLEMENTATION.md  BUG_FIX_REPORT_SYNTHESIS.md  CLEANUP_MANIFEST.md  CONTEXT.md  CRON_ITERATION_LOG.md  CRON_PROGRESS_2026-03-12.md  CRON_SUMMARY_2026-03-13.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_SESSION_20260313.md  DEVLOG_2026-03-12.md  DEVLOG_2026-03-13.md  DEV_AUDIT_2026-03-12.md  DEV_ITERATE_002_COMPLETE.md  DEV_ITERATE_002_PROGRESS.md  DEV_ITERATE_003_COMPLETE.md  DEV_ITERATE_003_OPTIMIZATIONS.md  DEV_ITERATE_003_PROGRESS.md  DEV_ITERATE_20260312.md  DEV_ITERATE_FINDINGS.md  DEV_ITERATE_FINDINGS_20260313.md  DEV_ITERATION_2026-03-13.md  DEV_ITERATION_20260312.md  DEV_ITERATION_SUMMARY.md  DEV_SESSION_2026-03-12.md  DEV_SESSION_2026-03-13.md  DEV_SESSION_2026-03-13_SUMMARY.md  DIAGNOSTIC_SUMMARY.md  DIMENSION_AGGREGATION_IMPLEMENTATION.md  E2E_REPORT_20260313.md  E2E_TEST_ITERATION_REPORT.md  E2E_TEST_SUMMARY_FINAL.md  EFFICIENCY_ANALYSIS.md  (+55 more)
.adk/: session.db
.claude/: settings.local.json
autoresearch/: baseline_scores.json  critic_prompt.txt  datasets.py  evaluate.py  loop.py  model_experiment.py  program.md  results.tsv  run_experiment.py
config/: CREDENTIALS_SETUP.md  __init__.py  __init__.py.new  action_items.yaml  action_ownership.yaml  agent_config.yaml  agent_models.yaml  alert_policy.yaml  business_context.yaml  chart_loader.py  chart_of_accounts.json  database_config.yaml.example  (+15 more)
(+764 files in other folders)
